syntax = "proto3";
package symphony.treasury.v1beta1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

import "symphony/treasury/v1beta1/treasury.proto";

option go_package = "github.com/osmosis-labs/osmosis/v27/x/treasury/types";

// GenesisState defines the oracle module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  string tax_rate = 2 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];
}